modif coté client et début coté quincaillerie

--- a/Gestion d'une quincaillerie Lab Id 21457/bin/.gitignore
+++ b/Gestion d'une quincaillerie Lab Id 21457/bin/.gitignore
@@ -1,6 +1,8 @@
 /Interface/
-/main/
-/quincaillerie/
-/test/
 /clients/
-/icons/
+/commandes/
+/main/
+/pieces/
+/quincaillerie/
+/servicesBancaires/
+/test/
