--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@
 *.class
 *.gitignore
 *.DS_Store
+/Gestion d'une quincaillerie Lab Id 21457/XML/nbproject/private/
+/Gestion d'une quincaillerie Lab Id 21457/XML/build/
+/Gestion d'une quincaillerie Lab Id 21457/XML/dist/
